--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Chess AI</title>
+        <title>knight-play</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta
           name="description"           
@@ -66,7 +66,7 @@
                         <div class="row mb-3 justify-content-center">
                             That's &nbsp <span id="positions-per-s">0</span> &nbsp positions / s.
                         </div>
-                        <div id="accordion">
+                        <div id="accordion" class="d-none">
                             <div class="card">
                                 <div class="card-header" id="settingsHeading">
                                     <h2 class="text-align-center">
