--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </head>
     <body>
         <main>
-            <div class="container my-3">
+            <div class="container my-5">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <h1 class="text-align-center">Simple Chess AI</h1>
+                    <div class="col-md-4">
+                        <h1 class="text-align-center">KNIGHT'S PLAY</h1>
                         <div class="row justify-content-center">
                             <span id="position-count">0</span> &nbsp positions evaluated in &nbsp <span id="time">0</span>s.
                         </div>
@@ -181,8 +181,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div id="myBoard"></div>
+                    <div class="col-md-8">
+                        <div id="myBoard" ></div>
                         <div class="row my-3 text-align-center">
                             <div class="col-md-6 my-2">
                                 <button class="btn btn-danger" id="undoBtn">Undo</button>
